# affiliate-mng

./: .gitignore  NEXT_STEPS.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PHASE_2_FRONTEND.md  PHASE_2_SUMMARY.md  QUICK_TEST_REFERENCE.md  README.md  TESTING_GUIDE.md  docker-compose.yml  test_program_types.sh
backend/: .env.example  activate_admin.py  alembic.ini  check_db_state.py  check_enum_types.py  check_migrations.py  check_seed.py  clean_database.sql  clear_pycache.py  fix_enum_values.py  fix_missing_columns.py  force_reset_db.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  reset_alembic.sql  reset_and_seed.py  reset_db.py  reset_db.sql  seed_admin.py  seed_db.py  verify_migration.py
backend/alembic/: README  env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_level_and_benefits_to_tiers.py  003_add_missing_commission_columns.py
backend/app/: __init__.py  database.py  dependencies.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: affiliates.py  auth.py  (+6 more)
backend/app/core/: config.py  exceptions.py  security.py
backend/app/models/: __init__.py  affiliate.py  conversion.py  program.py  referral.py  user.py
backend/app/schemas/: __init__.py  affiliate.py  auth.py  conversion.py  enrollment.py  program.py  referral.py  user.py
backend/app/services/: affiliate_service.py  commission_service.py  conversion_service.py  payout_service.py  referral_service.py
backend/app/utils/: seed.py
backend/tests/: __init__.py  conftest.py  test_program_types.py
(+58 files in other folders)
