[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.12.1",
    "arq==0.25.0",
    "email-validator==2.1.0",
    "fastapi[all]==0.104.1",
    "httpx==0.25.2",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-dateutil==2.8.2",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "python-slugify==8.0.1",
    "redis==5.0.1",
    "sqlalchemy==2.0.23",
    "uvicorn[standard]==0.24.0",
]
